Correct as suggested by Mathieu